// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template App Snapshot tests App screen after navigating to Network 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#101113",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "padding": 40,
      }
    }
  >
    <RCTScrollView
      style={
        Object {
          "flex": 2,
          "paddingLeft": 60,
          "paddingRight": 40,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#F7F7F8",
              "fontSize": 50,
              "fontWeight": "bold",
              "marginBottom": 10,
            }
          }
        >
          Network Requests
        </Text>
        <View
          accessibilityState={
            Object {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            Object {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#202226",
              "borderColor": "#363A41",
              "borderRadius": 8,
              "borderWidth": 3,
              "marginBottom": 12,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="endpoint-0"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#F7F7F8",
                  "fontSize": 24,
                  "fontWeight": "bold",
                  "marginBottom": 4,
                },
                false,
              ]
            }
          >
            GET httpbin/get
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#B7BBC3",
                  "fontSize": 18,
                },
                false,
              ]
            }
          >
            https://httpbin.org/get
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            Object {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#202226",
              "borderColor": "#363A41",
              "borderRadius": 8,
              "borderWidth": 3,
              "marginBottom": 12,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="endpoint-1"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#F7F7F8",
                  "fontSize": 24,
                  "fontWeight": "bold",
                  "marginBottom": 4,
                },
                false,
              ]
            }
          >
            GET httpbin/json
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#B7BBC3",
                  "fontSize": 18,
                },
                false,
              ]
            }
          >
            https://httpbin.org/json
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            Object {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#202226",
              "borderColor": "#363A41",
              "borderRadius": 8,
              "borderWidth": 3,
              "marginBottom": 12,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="endpoint-2"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#F7F7F8",
                  "fontSize": 24,
                  "fontWeight": "bold",
                  "marginBottom": 4,
                },
                false,
              ]
            }
          >
            GET httpbin/status/200
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#B7BBC3",
                  "fontSize": 18,
                },
                false,
              ]
            }
          >
            https://httpbin.org/status/200
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            Object {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#202226",
              "borderColor": "#363A41",
              "borderRadius": 8,
              "borderWidth": 3,
              "marginBottom": 12,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="endpoint-3"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#F7F7F8",
                  "fontSize": 24,
                  "fontWeight": "bold",
                  "marginBottom": 4,
                },
                false,
              ]
            }
          >
            GET httpbin/status/404
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#B7BBC3",
                  "fontSize": 18,
                },
                false,
              ]
            }
          >
            https://httpbin.org/status/404
          </Text>
        </View>
        <View
          style={
            Object {
              "marginTop": 10,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#202226",
                "borderColor": "#FFFFFF",
                "borderRadius": 8,
                "borderWidth": 3,
                "marginBottom": 10,
                "opacity": 1,
                "paddingHorizontal": 20,
                "paddingVertical": 12,
              }
            }
            testID="runAll"
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 22,
                    "fontWeight": "bold",
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  false,
                ]
              }
            >
              Run All Requests
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#202226",
                "borderColor": "#B7BBC3",
                "borderRadius": 8,
                "borderWidth": 3,
                "marginBottom": 10,
                "opacity": 1,
                "paddingHorizontal": 20,
                "paddingVertical": 12,
              }
            }
            testID="backHome"
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 22,
                    "fontWeight": "bold",
                  },
                  Object {
                    "color": "#B7BBC3",
                  },
                  false,
                ]
              }
            >
              Back to Home
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "backgroundColor": "#202226",
          "borderColor": "#363A41",
          "borderRadius": 8,
          "borderWidth": 1,
          "flex": 3,
          "padding": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#F7F7F8",
            "fontSize": 30,
            "fontWeight": "bold",
            "marginBottom": 15,
          }
        }
      >
        Results
      </Text>
      <RCTScrollView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#858B96",
                "fontSize": 22,
                "fontStyle": "italic",
              }
            }
          >
            No requests yet. Select an endpoint to start.
          </Text>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`Template App Snapshot tests Initial App screen 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#101113",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "paddingBottom": 56,
        "paddingHorizontal": 90,
        "paddingTop": 64,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../src/assets/vega.png",
            }
          }
          style={
            Object {
              "height": 92,
              "marginRight": 28,
              "width": 130,
            }
          }
        />
        <View>
          <Text
            style={
              Object {
                "color": "#F7F7F8",
                "fontSize": 52,
                "fontWeight": "bold",
              }
            }
          >
            Datadog SDK
          </Text>
          <Text
            style={
              Object {
                "color": "#B7BBC3",
                "fontSize": 24,
                "marginTop": 6,
              }
            }
          >
            Vega OS test application
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#202226",
            "borderColor": "#363A41",
            "borderRadius": 8,
            "borderWidth": 1,
            "minWidth": 420,
            "paddingHorizontal": 24,
            "paddingVertical": 18,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#B27CFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            PLATFORM
          </Text>
          <Text
            style={
              Object {
                "color": "#F7F7F8",
                "fontSize": 19,
                "marginTop": 2,
              }
            }
          >
            Vega OS (Kepler)
          </Text>
        </View>
        <View
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#B27CFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            PACKAGE
          </Text>
          <Text
            style={
              Object {
                "color": "#F7F7F8",
                "fontSize": 19,
                "marginTop": 2,
              }
            }
          >
            mobile-react-native-vega
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 64,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#F7F7F8",
            "fontSize": 30,
            "fontWeight": "bold",
            "marginBottom": 22,
          }
        }
      >
        SDK test areas
      </Text>
      <RCTScrollView
        contentContainerStyle={
          Object {
            "paddingRight": 70,
          }
        }
        horizontal={true}
        showsHorizontalScrollIndicator={false}
        style={
          Object {
            "flexGrow": 0,
          }
        }
      >
        <View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#202226",
                "borderColor": "#363A41",
                "borderRadius": 8,
                "borderWidth": 3,
                "height": 190,
                "justifyContent": "flex-end",
                "marginRight": 20,
                "opacity": 1,
                "padding": 26,
                "width": 370,
              }
            }
            testID="featureActionsLink"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#F7F7F8",
                    "fontSize": 28,
                    "fontWeight": "bold",
                    "marginBottom": 6,
                  },
                  false,
                ]
              }
            >
              Feature Actions
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#B7BBC3",
                    "fontSize": 19,
                    "lineHeight": 26,
                  },
                  false,
                ]
              }
            >
              Trigger each supported SDK feature one action at a time
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#202226",
                "borderColor": "#363A41",
                "borderRadius": 8,
                "borderWidth": 3,
                "height": 190,
                "justifyContent": "flex-end",
                "marginRight": 20,
                "opacity": 1,
                "padding": 26,
                "width": 370,
              }
            }
            testID="featureScenariosLink"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#F7F7F8",
                    "fontSize": 28,
                    "fontWeight": "bold",
                    "marginBottom": 6,
                  },
                  false,
                ]
              }
            >
              Feature Scenarios
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#B7BBC3",
                    "fontSize": 19,
                    "lineHeight": 26,
                  },
                  false,
                ]
              }
            >
              Run complete RUM, resource, action, and operation scenarios
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#202226",
                "borderColor": "#363A41",
                "borderRadius": 8,
                "borderWidth": 3,
                "height": 190,
                "justifyContent": "flex-end",
                "marginRight": 20,
                "opacity": 1,
                "padding": 26,
                "width": 370,
              }
            }
            testID="networkLink"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#F7F7F8",
                    "fontSize": 28,
                    "fontWeight": "bold",
                    "marginBottom": 6,
                  },
                  false,
                ]
              }
            >
              Network Requests
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#B7BBC3",
                    "fontSize": 19,
                    "lineHeight": 26,
                  },
                  false,
                ]
              }
            >
              Make HTTP requests and inspect RUM resource tracking
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#202226",
                "borderColor": "#363A41",
                "borderRadius": 8,
                "borderWidth": 3,
                "height": 190,
                "justifyContent": "flex-end",
                "marginRight": 20,
                "opacity": 1,
                "padding": 26,
                "width": 370,
              }
            }
            testID="rumViewsLink"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#F7F7F8",
                    "fontSize": 28,
                    "fontWeight": "bold",
                    "marginBottom": 6,
                  },
                  false,
                ]
              }
            >
              RUM Views
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#B7BBC3",
                    "fontSize": 19,
                    "lineHeight": 26,
                  },
                  false,
                ]
              }
            >
              Start and stop views to test RUM lifecycle tracking
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;
